--- a/assets/pages/service.html
+++ b/assets/pages/service.html
@@ -20,8 +20,8 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <!-- Css -->
-    <link rel="stylesheet" href="../styleSheet/services.css">
     <link rel="stylesheet" href="../styleSheet/common.css">
+    <link rel="stylesheet" href="../styleSheet/services.css">
     <link rel="stylesheet" href="../Media/common-media.css">
     <link rel="stylesheet" href="../Media/services-media.css">
 
@@ -34,7 +34,6 @@
     <script src="../JS/common.js"></script>
 
 </head>
-
 
 <body>
     <div class="container">
@@ -59,13 +58,13 @@
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="service.html">Services</a></li>
                                 <li><a href="#">Projects</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="contact.html">Contact Me</a></li>
                             </ul>
                         </div>
                     </div>
 
                     <div class="col text-end">
-                        <a href="#Contact" class="nav-btn">
+                        <a href="contact.html" class="nav-btn">
                             Hire Me
                             <i class="ri-shake-hands-line"></i>
                         </a>
@@ -156,14 +155,14 @@
 
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <h4>Projects</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <h4>Contact</h4>
+                            <a href="contact.html">
+                                <h4>Contact Me</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </li>
