--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
 
                     <div class="col">
                         <div class="nav-logo">
-                            <a href="#">Farzad Khan</a>
+                            <a href="index.html">Farzad Khan</a>
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="nav-pages">
                             <ul class="d-flex align-items-center gap-3 gap-lg-4">
-                                <li><a href="#">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="assets/pages/about.html">About</a></li>
                                 <li><a href="assets/pages/service.html">Services</a></li>
                                 <li><a href="#">Projects</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="assets/pages/contact.html">Contact Me</a></li>
                             </ul>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
 
                     <div class="col transition">
                         <div class="nav-logo">
-                            <a href="#">Farzad Khan</a>
+                            <a href="index.html">Farzad Khan</a>
                         </div>
                     </div>
 
@@ -106,7 +106,7 @@
 
                     <ul>
                         <li>
-                            <a href="#">
+                            <a href="index.html">
                                 <h4>Home</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
@@ -162,8 +162,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <h4>Contact</h4>
+                            <a href="assets/pages/contact.html">
+                                <h4>Contact Me</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </li>
