--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -59,13 +59,13 @@
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="service.html">Services</a></li>
                                 <li><a href="#">Projects</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="contact.html">Contact Me</a></li>
                             </ul>
                         </div>
                     </div>
 
                     <div class="col text-end">
-                        <a href="#Contact" class="nav-btn">
+                        <a href="contact.html" class="nav-btn">
                             Hire Me
                             <i class="ri-shake-hands-line"></i>
                         </a>
@@ -162,8 +162,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <h4>Contact</h4>
+                            <a href="contact.html">
+                                <h4>Contact Me</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </li>
