contact page completed

--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -273,11 +273,100 @@
         </section>
 
 
+        <section id="contactForm" class="my-4">
+
+            <div class="row row-gap-4">
+
+                <div class="col-12 col-lg-6">
+                    <div class="section-card h-100">
+                        <div class="form-left d-flex align-items-start justify-content-center flex-column gap-5">
+                            <div class="form-ref location text-start">
+                                <div
+                                    class="d-flex align-items-start align-items-sm-center  flex-column flex-sm-row gap-2">
+                                    <i class="ri-map-pin-line"></i>
+                                    <h5>Location: </h5>
+                                </div>
+                                <a>
+                                    KPK, Pakistan
+                                </a>
+                            </div>
+
+                            <div class="form-ref contact text-start">
+                                <div
+                                    class="d-flex align-items-start align-items-sm-center  flex-column flex-sm-row gap-2">
+                                    <i class="ri-phone-line"></i>
+                                    <h5>Contact Number: </h5>
+                                </div>
+                                <a href="tel:+92158412564">
+                                    +92 3158412564
+                                </a>
+                            </div>
+
+                            <div class="form-ref contact text-start">
+                                <div
+                                    class="d-flex align-items-start align-items-sm-center  flex-column flex-sm-row gap-2">
+                                    <i class="ri-whatsapp-line"></i>
+                                    <h5>WhatsApp: </h5>
+                                </div>
+                                <a href="https://wa.me/+923158412564">
+                                    +92 3158412564
+                                </a>
+                            </div>
+
+                            <div class="form-ref email text-start">
+                                <div
+                                    class="d-flex align-items-start align-items-sm-center  flex-column flex-sm-row gap-2">
+                                    <i class="ri-mail-send-line"></i>
+                                    <h5>Email: </h5>
+                                </div>
+                                <a href="mailto:devbyfarzad.khan@gmail.com">
+                                    devbyfarzad.khan@gmail.com
+                                </a>
+
+                            </div>
+                        </div>
 
 
+                    </div>
+                </div>
 
+                <div class="col-12 col-lg-6">
+                    <div class="section-card">
 
+                        <div class="form-left">
 
+                            <form action="https://api.web3forms.com/submit" method="POST">
+                                <input type="hidden" name="access_key" value="a2ea4e43-0185-4312-a149-d9170755f0da">
+
+                                <input type="text" name="First Name" id="fname" placeholder="First Name">
+                                <input type="text" name="Last Name" id="lname" placeholder="Last Name">
+                                <input type="email" name="email" id="email" placeholder="Email">
+                                <input type="tel" name="number" id="number" placeholder="Contact Number">
+                                <textarea name="message" rows="5" id="message" placeholder="Message"></textarea>
+
+                                <input type="submit" class="submit m-0">
+                            </form>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <!-- Copyright -->
+        <section id="copyright" class="mt-0 mb-5 px-lg-1">
+            <div class="d-flex align-items-center justify-content-between flex-column row-gap-2 flex-md-row">
+                <p>
+                    © 2026 <span>Farzad Khan</span>. All Rights Reserved.
+                </p>
+
+                <p>
+                    Designed and Developed with precision by <span>Farzad Khan</span>.
+                </p>
+            </div>
+        </section>
 
     </div>
 </body>
