Project Page Completed

--- a/assets/pages/service.html
+++ b/assets/pages/service.html
@@ -57,8 +57,8 @@
                                 <li><a href="../../index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="service.html">Services</a></li>
-                                <li><a href="#">Projects</a></li>
-                                <li><a href="contact.html">Contact Me</a></li>
+                                <li><a href="projects.html">Projects</a></li>
+                                <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -155,7 +155,7 @@
 
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="projects.html">
                                 <h4>Projects</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
