--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="assets/pages/about.html">About</a></li>
                                 <li><a href="assets/pages/service.html">Services</a></li>
-                                <li><a href="#">Projects</a></li>
-                                <li><a href="assets/pages/contact.html">Contact Me</a></li>
+                                <li><a href="assets/pages/projects.html">Projects</a></li>
+                                <li><a href="assets/pages/contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
 
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="assets/pages/projects.html">
                                 <h4>Projects</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
@@ -887,7 +887,7 @@
                     push the boundaries of design and deliver exceptional work.
                 </p>
 
-                <a href="#">
+                <a href="assets/pages/contact.html">
                     Let's Talk
                     <i class="ri-download-line"></i>
                 </a>
