--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -65,7 +65,7 @@
                     </div>
 
                     <div class="col text-end">
-                        <a href="contact.html" class="nav-btn">
+                        <a href="#contactForm" class="nav-btn">
                             Hire Me
                             <i class="ri-shake-hands-line"></i>
                         </a>
@@ -271,7 +271,6 @@
 
             </div>
         </section>
-
 
         <section id="contactForm" class="my-4">
 
