--- a/assets/pages/projects.html
+++ b/assets/pages/projects.html
@@ -222,6 +222,7 @@
             </div>
         </section>
 
+        <div id="projects"></div>
         <!-- H ==> Tabs -->
         <section id="tabs" class="my-5">
             <div class="section-card text-start">
@@ -505,7 +506,7 @@
 
                     <div class="tab-pane fade " id="Layout" role="tabpanel" aria-labelledby="Layout1" tabindex="0">
 
-                        <div class="row">
+                        <div class="row row-gap-4">
 
                             <div class="col-12 col-sm-6 col-lg-4">
                                 <div class="tab-context">
@@ -570,7 +571,7 @@
 
                     <div class="tab-pane fade" id="Personal" role="tabpanel" aria-labelledby="Personal1" tabindex="0">
 
-                        <div class="row">
+                        <div class="row row-gap-4">
 
                             <div class="col-12 col-sm-6 col-lg-4">
                                 <div class="tab-context">
@@ -626,25 +627,6 @@
 
         </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <!-- CTA -->
         <section id="CTA" class="section-card mb-5">
             <div class="cta-content">
@@ -658,7 +640,7 @@
                     push the boundaries of design and deliver exceptional work.
                 </p>
 
-                <a href="#">
+                <a href="contact.html">
                     Let's Talk
                     <i class="ri-download-line"></i>
                 </a>
