--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -460,7 +460,7 @@
                     push the boundaries of design and deliver exceptional work.
                 </p>
 
-                <a href="#">
+                <a href="contact.html">
                     Let's Talk
                     <i class="ri-download-line"></i>
                 </a>
