--- a/assets/pages/service.html
+++ b/assets/pages/service.html
@@ -116,43 +116,11 @@
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </li>
-                        <li class="sub-dropdown">
+                        <li>
                             <a href="service.html">
                                 <h4>Services</h4>
-                                <!-- <i class="ri-arrow-down-s-line dropdown-icon-small active"></i> -->
-                                <i class="ri-arrow-down-s-line transition dropdown-icon-small"></i>
+                                <i class="ri-arrow-right-s-line"></i>
                             </a>
-
-                            <!-- <div class="subdropdonw-content active"> -->
-                            <div class="subdropdown-content transition">
-                                <ul class="px-3 pt-3">
-                                    <li>
-                                        <a href="#">
-                                            <h4>Sub Dropdown 1</h4>
-                                            <i class="ri-arrow-right-s-line"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <h4>Sub Dropdown 1</h4>
-                                            <i class="ri-arrow-right-s-line"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <h4>Sub Dropdown 1</h4>
-                                            <i class="ri-arrow-right-s-line"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <h4>Sub Dropdown 1</h4>
-                                            <i class="ri-arrow-right-s-line"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-
                         </li>
                         <li>
                             <a href="projects.html">
@@ -195,7 +163,7 @@
                                 clean, scalable code with a minimalist aesthetic to build web applications that don't
                                 just work—they inspire.
                             </p>
-                            <a href="#" class="cta-link">
+                            <a href="contact.html#contactForm" class="cta-link">
                                 Start a Project
                             </a>
                         </div>
