--- a/index.html
+++ b/index.html
@@ -117,43 +117,11 @@
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </li>
-                        <li class="sub-dropdown">
+                        <li>
                             <a href="assets/pages/service.html">
                                 <h4>Services</h4>
-                                <!-- <i class="ri-arrow-down-s-line dropdown-icon-small active"></i> -->
-                                <i class="ri-arrow-down-s-line transition dropdown-icon-small"></i>
+                                <i class="ri-arrow-right-s-line"></i>
                             </a>
-
-                            <!-- <div class="subdropdonw-content active"> -->
-                            <div class="subdropdown-content transition">
-                                <ul class="px-3 pt-3">
-                                    <li>
-                                        <a href="#">
-                                            <h4>Sub Dropdown 1</h4>
-                                            <i class="ri-arrow-right-s-line"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <h4>Sub Dropdown 1</h4>
-                                            <i class="ri-arrow-right-s-line"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <h4>Sub Dropdown 1</h4>
-                                            <i class="ri-arrow-right-s-line"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <h4>Sub Dropdown 1</h4>
-                                            <i class="ri-arrow-right-s-line"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-
                         </li>
                         <li>
                             <a href="assets/pages/projects.html">
@@ -200,7 +168,7 @@
                                     <p>I am a Front-end Web Developer based in Pakistan.</p>
 
                                     <ul
-                                        class="d-flex align-items-center justify-content-center justify-content-sm-start justify-content-lg-center gap-3 mt-2">
+                                        class="hero-field d-flex align-items-center justify-content-center justify-content-sm-start justify-content-lg-center gap-3 mt-2">
                                         <li>
                                             <a href="https://wa.me/+923158412564" target="_blank">
                                                 <i class="ri-whatsapp-line"></i>
@@ -666,11 +634,16 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="project-info">
                             <div class="project-img">
+                                <div class="fixed-icon">
+                                    <a href="https://foodfunbyfarzad.netlify.app/" target="_blank">
+                                        <i class="ri-arrow-right-up-line"></i>
+                                    </a>
+                                </div>
                                 <img src="assets/Images/project/foodfun.png " alt="images">
                             </div>
                             <div class="project-text">
                                 <h3>
-                                    <a href="#" target="_blank">
+                                    <a href="https://foodfunbyfarzad.netlify.app/" target="_blank">
                                         FoodFun Hospitality
                                         <i class="ri-arrow-right-up-box-line"></i>
                                     </a>
@@ -686,12 +659,17 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="project-info">
                             <div class="project-img">
+                                <div class="fixed-icon">
+                                    <a href="https://labourbyfarzad.netlify.app/" target="_blank">
+                                        <i class="ri-arrow-right-up-line"></i>
+                                    </a>
+                                </div>
                                 <img src="assets/Images/project/labour.png " alt="images">
                             </div>
                             <div class="project-text">
                                 <h3>
-                                    <a href="#" target="_blank">
-                                        Workforce Solutions
+                                    <a href="https://labourbyfarzad.netlify.app/" target="_blank">
+                                        Labour
                                         <i class="ri-arrow-right-up-box-line"></i>
                                     </a>
                                 </h3>
@@ -706,11 +684,16 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="project-info">
                             <div class="project-img">
+                                <div class="fixed-icon">
+                                    <a href="https://bankistbyfarzad.netlify.app/" target="_blank">
+                                        <i class="ri-arrow-right-up-line"></i>
+                                    </a>
+                                </div>
                                 <img src="assets/Images/project/bankist.png " alt="images">
                             </div>
                             <div class="project-text">
                                 <h3>
-                                    <a href="#" target="_blank">
+                                    <a href="https://bankistbyfarzad.netlify.app/" target="_blank">
                                         Bankist Dashboard
                                         <i class="ri-arrow-right-up-box-line"></i>
                                     </a>
@@ -726,11 +709,16 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="project-info">
                             <div class="project-img">
+                                <div class="fixed-icon">
+                                    <a href="https://stori.pk/" target="_blank">
+                                        <i class="ri-arrow-right-up-line"></i>
+                                    </a>
+                                </div>
                                 <img src="assets/Images/project/StoriMockup.png " alt="images">
                             </div>
                             <div class="project-text">
                                 <h3>
-                                    <a href="#" target="_blank">
+                                    <a href="https://stori.pk/" target="_blank">
                                         Stori Healthcare Platform
                                         <i class="ri-arrow-right-up-box-line"></i>
                                     </a>
@@ -746,11 +734,16 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="project-info">
                             <div class="project-img">
+                                <div class="fixed-icon">
+                                    <a href="https://printingnewyorkby.netlify.app/" target="_blank">
+                                        <i class="ri-arrow-right-up-line"></i>
+                                    </a>
+                                </div>
                                 <img src="assets/Images/project/iPhone 15 Pro.png " alt="images">
                             </div>
                             <div class="project-text">
                                 <h3>
-                                    <a href="#" target="_blank">
+                                    <a href="https://printingnewyorkby.netlify.app/" target="_blank">
                                         NY Printing Solutions
                                         <i class="ri-arrow-right-up-box-line"></i>
                                     </a>
@@ -766,11 +759,16 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="project-info">
                             <div class="project-img">
+                                <div class="fixed-icon">
+                                    <a href="https://skysensebyfarzad.netlify.app/" target="_blank">
+                                        <i class="ri-arrow-right-up-line"></i>
+                                    </a>
+                                </div>
                                 <img src="assets/Images/project/weather pc.png " alt="images">
                             </div>
                             <div class="project-text">
                                 <h3>
-                                    <a href="#" target="_blank">
+                                    <a href="https://skysensebyfarzad.netlify.app/" target="_blank">
                                         SkySense Weather Dashboard
                                         <i class="ri-arrow-right-up-box-line"></i>
                                     </a>
@@ -810,7 +808,7 @@
                                     <i class="ri-map-pin-line"></i>
                                     <h5>Location: </h5>
                                 </div>
-                                <a href="#">
+                                <a href="assets/pages/contact.html#contactForm">
                                     KPK, Pakistan
                                 </a>
                             </div>
@@ -821,7 +819,7 @@
                                     <i class="ri-phone-line"></i>
                                     <h5>Contact Number: </h5>
                                 </div>
-                                <a href="tel:+92158412564">
+                                <a href="tel:+92158412564" target="_blank">
                                     +92 3158412564
                                 </a>
                             </div>
@@ -832,7 +830,7 @@
                                     <i class="ri-whatsapp-line"></i>
                                     <h5>WhatsApp: </h5>
                                 </div>
-                                <a href="https://wa.me/+923158412564">
+                                <a href="https://wa.me/+923158412564" target="_blank">
                                     +92 3158412564
                                 </a>
                             </div>
@@ -843,7 +841,7 @@
                                     <i class="ri-mail-send-line"></i>
                                     <h5>Email: </h5>
                                 </div>
-                                <a href="mailto:devbyfarzad.khan@gmail.com">
+                                <a href="mailto:devbyfarzad.khan@gmail.com" target="_blank">
                                     devbyfarzad.khan@gmail.com
                                 </a>
 
