--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -169,7 +169,7 @@
                                     <i class="ri-circle-fill"></i>
                                     Available for Hiring
                                 </span>
-                                <a class="cta-link" href="#">
+                                <a class="cta-link" href="../Images/farzad.pdf" download="Farzad CV.pdf">
                                     Download CV
                                     <i class="ri-download-fill text-white"></i>
                                 </a>
@@ -428,7 +428,7 @@
                     push the boundaries of design and deliver exceptional work.
                 </p>
 
-                <a href="contact.html">
+                <a href="contact.html#contactForm">
                     Let's Talk
                     <i class="ri-download-line"></i>
                 </a>
