--- a/assets/pages/projects.html
+++ b/assets/pages/projects.html
@@ -608,7 +608,7 @@
                     push the boundaries of design and deliver exceptional work.
                 </p>
 
-                <a href="contact.html">
+                <a href="contact.html#contactForm">
                     Let's Talk
                     <i class="ri-download-line"></i>
                 </a>
