--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                         Available for Hiring
                                     </p>
 
-                                    <a class="cta-link" href="#">
+                                    <a class="cta-link" href="assets/Images/farzad.pdf" download="Farzad CV.pdf">
                                         Download CV
                                         <i class="ri-download-fill"></i>
                                     </a>
@@ -885,7 +885,7 @@
                     push the boundaries of design and deliver exceptional work.
                 </p>
 
-                <a href="assets/pages/contact.html">
+                <a href="assets/pages/contact.html#contactForm">
                     Let's Talk
                     <i class="ri-download-line"></i>
                 </a>
