--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -58,7 +58,7 @@
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="service.html">Services</a></li>
                                 <li><a href="projects.html">Projects</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="contact.html" class="active">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -122,13 +122,13 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="projects.html">
                                 <h4>Projects</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="contact.html">
+                            <a href="contact.html" class="active">
                                 <h4>Contact</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
@@ -217,7 +217,7 @@
                             </ul>
 
                         </div>
-                        <a class="cta-link mt-0" href="#">
+                        <a class="cta-link mt-0" href="../Images/farzad.pdf" download="Farzad CV.pdf">
                             Download CV
                             <i class="ri-download-fill text-white"></i>
                         </a>
@@ -229,7 +229,6 @@
                         <div class="contact-hero-left">
                             <div class="hero-img">
                                 <img src="../Images/hero-contact.png" alt="image">
-
                             </div>
                         </div>
                     </div>
