--- a/assets/pages/projects.html
+++ b/assets/pages/projects.html
@@ -59,7 +59,7 @@
                                 <li><a href="../../index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="service.html">Services</a></li>
-                                <li><a href="projects.html">Projects</a></li>
+                                <li><a href="projects.html" class="active">Projects</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
@@ -124,7 +124,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="projects.html">
+                            <a href="projects.html" class="active">
                                 <h4>Projects</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
@@ -601,7 +601,7 @@
 
                 <h1 class=" text-uppercase text-center fw-bolder">
                     Are You Ready to
-                    <span> kickstart </span> your <br> <span>Project</span> project with a touch of magic?
+                    <span> kickstart </span> your <br> <span>Project</span> with a touch of magic?
                 </h1>
                 <p>
                     Reach out and let's make it happen ✨. I'm also available for full-time or Part-time opportunities to
