--- a/assets/pages/service.html
+++ b/assets/pages/service.html
@@ -56,7 +56,7 @@
                             <ul class="d-flex align-items-center gap-3 gap-lg-4">
                                 <li><a href="../../index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
-                                <li><a href="service.html">Services</a></li>
+                                <li><a href="service.html" class="active">Services</a></li>
                                 <li><a href="projects.html">Projects</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
@@ -117,7 +117,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="service.html">
+                            <a href="service.html" class="active">
                                 <h4>Services</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
@@ -445,7 +445,7 @@
 
                 <h1 class=" text-uppercase text-center fw-bolder">
                     Are You Ready to
-                    <span> kickstart </span> your <br> <span>Project</span> project with a touch of magic?
+                    <span> kickstart </span> your <br> <span>Project</span> with a touch of magic?
                 </h1>
                 <p>
                     Reach out and let's make it happen ✨. I'm also available for full-time or Part-time opportunities to
