--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="col">
                         <div class="nav-pages">
                             <ul class="d-flex align-items-center gap-3 gap-lg-4">
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="index.html" class="active">Home</a></li>
                                 <li><a href="assets/pages/about.html">About</a></li>
                                 <li><a href="assets/pages/service.html">Services</a></li>
                                 <li><a href="assets/pages/projects.html">Projects</a></li>
@@ -106,7 +106,7 @@
 
                     <ul>
                         <li>
-                            <a href="index.html">
+                            <a href="index.html" class="active">
                                 <h4>Home</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
@@ -875,7 +875,7 @@
 
                 <h1 class=" text-uppercase text-center fw-bolder">
                     Are You Ready to
-                    <span> kickstart </span> your <br> <span>Project</span> project with a touch of magic?
+                    <span> kickstart </span> your <br> <span>Project</span> with a touch of magic?
                 </h1>
                 <p>
                     Reach out and let's make it happen ✨. I'm also available for full-time or Part-time opportunities to
