--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -393,8 +393,9 @@
                             <i class="ri-flashlight-line"></i>
                             <h3>Data-Heavy Dashboards</h3>
                             <p>
-                                I specialize in managing complex states and real-time data flow for B2B systems, such as
-                                healthcare platforms and pharmaceutical management tools.
+                                I specialize in managing complex states and real-time data flow for B2B systems,
+                                ensuring seamless synchronization across sophisticated dashboards and enterprise-grade
+                                interfaces
                             </p>
                         </div>
                     </div>
