--- a/assets/pages/service.html
+++ b/assets/pages/service.html
@@ -220,14 +220,16 @@
                                     <li>
                                         <p>
                                             <span>State Management: </span>
-                                            Expert implementation of Redux Toolkit, Zustand, or React Query.
+                                            Expert implementation of custom data handling, local storage persistence,
+                                            and efficient DOM updates using clean, modular Vanilla JavaScript.
                                         </p>
                                     </li>
 
                                     <li>
                                         <p>
                                             <span>API Integration: </span>
-                                            Seamlessly connecting your frontend to RESTful or GraphQL services.
+                                            Seamlessly connecting your frontend to RESTful services using asynchronous
+                                            Fetch API and dynamic JSON data processing.
                                         </p>
                                     </li>
                                 </ul>
@@ -261,8 +263,8 @@
                                     <li>
                                         <p>
                                             <span>Motion Design: </span>
-                                            Subtle Framer Motion or GSAP animations that add a "premium" feel without
-                                            slowing down the site.
+                                            Subtle CSS transitions and JavaScript-driven scroll animations that add a
+                                            "premium" feel without slowing down the site.
                                         </p>
                                     </li>
 
