--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
                             <i class="ri-flashlight-line"></i>
                             <h3>Scalable Solutions</h3>
                             <p>
-                                Developing data-driven applications—like your Pharma systems—with clean, maintainable
-                                code optimized for speed and long-term scalability.
+                                Developing high-performance, data-driven applications with a focus on clean,
+                                maintainable code and optimized logic to ensure speed and long-term scalability.
                             </p>
                             <a href="assets/pages/about.html#solutions" class="cta-link">Read More</a>
                         </div>
